@@ -3,6 +3,7 @@
 - Feature: [#15642] Track design placement can now use contruction modifier keys (ctrl/shift).
 - Change: [#22596] Land ownership fixes described by .parkpatch files are now only considered on scenarios.
 - Fix: [#2614] The colour tab of the ride window does not hide invisible cars (original bug).
+- Fix: [#15406] Tunnels on steep Side-Friction track are drawn too low.
 - Fix: [#21959] “Save this before...?” message does not appear when selecting “New Game”.
 - Fix: [#22231] Invalid object version can cause a crash.
 - Fix: [#22653] Add several .parkpatch files for missing water tiles in RCT1 and RCT2 scenarios.
